         Requires loading machines database, which will slow down launching process a lot!
         A hashed database of machines is necessary to speed up plugin.

FEATURE  Allow user to choose default assets as AEL does in addon seetings.

FEATURE  Trailer support in MAME machines and Software Lists.

WIP      Manage SL Favourites.


[B]Advanced Emulator Launcher | version 0.9.3 | 30 May 2017[/B]

FEATURE  Ability to choose default Icon and Fanart for MAME and SL ROMs in addon settings.

FEATURE  "Parent only" view mode.

FEATURE  Plugin speed has been increased a lot owing to a brand new database design.

FEATURE  Unified catalog system and new machine rendering method.
         Requires wiping of ADDON_DATA_DIR to avoid problems.

FEATURE  Properties can be configured for every individual list in AML.

FEATURE  New Status Device flag. Marks wheter a device is mandatory or not.

FEATURE  Show database statistics.

FEATURE  Favourite MAME machines.

FEATURE  Favourite Software Lists ROMs.

FEATURE  Scan SL assets/artwork.

FEATURE  Manage MAME Favourites.


[B]Advanced Emulator Launcher | version 0.9.2 | 12 February 2017[/B]

FEATURE  Ability to sort cataloged filters by number of machines.

FEATURE  New Main Filter "Machines with no ROMs".

FEATURE  Launch parents with no clones from the parents list in Catalogued filters.

FEATURE  Use a fancy name for well-known MAME drivers.

FEATURE  On filter `Machines by Software List`, substitute short SL name by the proper SL name.

FEATURE  Display MAME stdout/stderr.

FEATURE  Scan Software Lists.

FEATURE  Launch machines with software lists.
        
FIX      Use SORT_METHOD_LABEL_IGNORE_FOLDERS insead of SORT_METHOD_LABEL. This avoids folders
         to be rendered first when sorting listitems alpahbetically.


[B]Advanced Emulator Launcher | version 0.9.1 | 04 February 2017[/B]

FEATURE  AML only works on Krypton now. Updated addon.xml with new fields.

FEATURE  Add support for nplayers.ini.
